# applications_contacts_data

./: .gitignore  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  build-profile.json5  bundle.json  config.json  contact.gni  oh-package.json5  ohos.build  publicity.xml
AppScope/: app.json  app.json5
ability/account/include/: account_change_event.h  account_data_collection.h  account_sync.h
ability/account/src/: account_data_collection.cpp  account_sync.cpp
ability/common/include/: calllog_common.h  common.h  contacts_columns.h  contacts_common.h  hilog_wrapper.h
ability/datadisasterrecovery/include/: database_disaster_recovery.h
ability/datadisasterrecovery/src/: database_disaster_recovery.cpp
ability/merge/include/: candidate_status.h  match_candidate.h  merger_contacts.h
ability/merge/src/: candidate_status.cpp  match_candidate.cpp  merger_contacts.cpp
ability/sinicization/include/: character_transliterate.h  construction_name.h
ability/sinicization/src/: character_transliterate.cpp  construction_name.cpp
contacts/: BUILD.gn
contacts/include/: contacts_api.h  contacts_build.h  contacts_control.h  contacts_napi_common.h  contacts_napi_object.h  contacts_napi_utils.h  contacts_sync_api.h  contacts_sync_operations.h  contacts_telephony_permission.h  hilog_wrapper_api.h  kit_bundle_mgr_helper.h  kit_pixel_map_util.h  result_convert.h  sync_json_helper.h
contacts/src/: contact.js  contacts_api.cpp  contacts_build.cpp  contacts_control.cpp  contacts_napi_utils.cpp  contacts_sync_api.cpp  contacts_sync_operations.cpp  contacts_telephony_permission.cpp  kit_bundle_mgr_helper.cpp  kit_pixel_map_util.cpp  native_module.cpp  picker.js  result_convert.cpp  sync_json_helper.cpp
contactsCJ/: BUILD.gn
contactsCJ/include/: contacts.h  contacts_control.h  contacts_ffi.h  contacts_picker_ffi.h  contacts_utils.h  portrait_ffi.h
contactsCJ/src/: contacts.cpp  contacts_control.cpp  contacts_ffi.cpp  contacts_permission.cpp  contacts_picker.cpp  contacts_utils.cpp  portrait_ffi.cpp
dataBusiness/calllog/include/: calllog_ability.h  calllog_backup_napi.h  calllog_database.h  calllog_manager.h  calllogcheck_ability.h  native_module_ohos_calllog_backup.h
dataBusiness/calllog/src/: calllog_ability.cpp  calllog_backup_napi.cpp  calllog_database.cpp  calllog_manager.cpp  calllogcheck_ability.cpp  native_module_ohos_calllog_backup.cpp
dataBusiness/contacts/include/: auto_sync_detail_progress_observer.h  blocklist_database.h  cloud_contacts_observer.h  common_tool_type.h  contact_connect_ability.h  contacts.h  contacts_account.h  contacts_data_ability.h  contacts_database.h  contacts_datashare_stub_impl.h  contacts_manager.h  contacts_type.h  contacts_update_helper.h  number_identity_helper.h  privacy_contacts_manager.h  profile_database.h  raw_contacts.h
dataBusiness/contacts/src/: auto_sync_detail_progress_observer.cpp  blocklist_database.cpp  cloud_contacts_observer.cpp  contact_connect_ability.cpp  contacts.cpp  contacts_account.cpp  contacts_data_ability.cpp  contacts_database.cpp  contacts_datashare_stub_impl.cpp  contacts_manager.cpp  contacts_type.cpp  contacts_update_helper.cpp  number_identity_helper.cpp  profile_database.cpp  ptivacy_contacts_manager.cpp  raw_contacts.cpp
dataBusiness/poster/include/: i_poster_call.h  poster_call_adapter.h  poster_call_callback.h  poster_call_connection.h  poster_call_proxy.h  poster_call_stub.h  poster_callback_stub.h
dataBusiness/poster/src/: poster_call_adapter.cpp  poster_call_connection.cpp  poster_call_proxy.cpp  poster_call_stub.cpp  poster_callback_stub.cpp
dataBusiness/quicksearch/include/: contacts_search.h
dataBusiness/quicksearch/src/: contacts_search.cpp
dataBusiness/spam_call/include/: callback_stub_helper.h  i_spam_call.h  spam_call_adapter.h  spam_call_callback.h  spam_call_connection.h  spam_call_proxy.h  spam_call_stub.h
dataBusiness/spam_call/src/: callback_stub_helper.cpp  spam_call_adapter.cpp  spam_call_connection.cpp  spam_call_proxy.cpp  spam_call_stub.cpp
dataBusiness/voicemail/include/: voicemail_ability.h  voicemail_database.h
dataBusiness/voicemail/src/: voicemail_ability.cpp  voicemail_database.cpp
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json  module.json5
entry/src/ohosTest/: Test.json  module.json5
hvigor/: @ohos.data.relationalStore.d.ts  hvigor-config.json5
jstest/: Calllog_test.js  ContactCard_test.js  ContactMerge_test.js  Contacts_test.js  Groups_test.js  List.test.js  ObjectCallback.js  ObjectInterface_test.js  Performance_test.js  Stability_test.js  Voicemail_test.js  common.js  recovery_test.js
signature/: contactsdata.p7b  contactsdata1.p7b  pm.gni
test/: BUILD.gn
test/fuzztest/calllog_fuzzer/: BUILD.gn  calllog_ability_fuzz_test.cpp  calllog_ability_fuzz_test.h
test/fuzztest/contactsdata_fuzzer/: BUILD.gn  contactfuzz_test.cpp  contactfuzz_test.h
test/fuzztest/contactsother_fuzzer/: BUILD.gn  other_fuzz_test.cpp  other_fuzz_test.h
test/fuzztest/contactsutils_fuzzer/: BUILD.gn  utils_fuzz_test.cpp  utils_fuzz_test.h
test/fuzztest/database_fuzzer/: BUILD.gn  contacts_database_fuzz_test.cpp  (+1 more)
test/fuzztest/transliterate_fuzzer/: BUILD.gn  character_transliteratefuzz_test.cpp  character_transliteratefuzz_test.h
test/fuzztest/voicemail_fuzzer/: BUILD.gn  voicemailfuzz_test.h  voicemailsafuzz_test.cpp
test/unittest/: BUILD.gn
test/unittest/include/: base_test.h  calllogability_test.h  calllogfuzzyquery_test.h  contactability_test.h  contactgroup_test.h  contactpinyin_test.h  contactprofile_test.h  contactquery_test.h  mergecontact_test.h  performance_test.h  random_number_utils.h  recovery_test.h  stability_test.h  test_common.h  voicemailability_test.h
test/unittest/src/: base_test.cpp  calllogability_test.cpp  calllogfuzzyquery_test.cpp  contactability_test.cpp  contactgroup_test.cpp  contactpinyin_test.cpp  contactprofile_test.cpp  contactquery_test.cpp  mergecontact_test.cpp  performance_test.cpp  random_number_utils.cpp  recovery_test.cpp  stability_test.cpp  voicemailability_test.cpp
(+196 files in other folders)
