# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

config("cj_contacts_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${datashare_cj_ffi_path}/data_share_predicates/include",
    "include"
  ]
  cflags = []
}

ohos_shared_library("contact_cj") {
  sources = [
    "src/contacts.cpp",
    "src/contacts_ffi.cpp",
    "src/contacts_utils.cpp",
  ]

  public_configs = [ ":cj_contacts_public_config" ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//applications/standard/contacts_data/contacts/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]

  deps = [
    "//applications/standard/contacts_data/contacts:contact"
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "data_share:datashare_consumer",
    "data_share:cj_data_share_predicates_ffi",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]

  defines = [
    "CONTACTSDATA_LOG_TAG = \"ContactsFfi\"",
    "LOG_DOMAIN = 0xD001F09",
  ]

  public_deps = []
  innerapi_tags = [ "platformsdk" ]
  part_name = "contacts_data"
  subsystem_name = "applications"
}
## Build contact_cj.so }}}
