# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

## UnitTest contacts_test {{{
config("test_public_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
  cflags = []
}

ohos_unittest("contacts_test") {
  module_out_path = "applications/prebuilt_hap"
  sources = [
    "src/base_test.cpp",
    "src/calllogability_test.cpp",
    "src/calllogfuzzyquery_test.cpp",
    "src/contactability_test.cpp",
    "src/contactgroup_test.cpp",
    "src/contactpinyin_test.cpp",
    "src/contactprofile_test.cpp",
    "src/contactquery_test.cpp",
    "src/mergecontact_test.cpp",
    "src/performance_test.cpp",
    "src/random_number_utils.cpp",
    "src/recovery_test.cpp",
    "src/stability_test.cpp",
    "src/voicemailability_test.cpp",
  ]
  deps = [
    "applications/standard/contacts_data:contactsdataability",
    "//foundation/ability/ability_runtime/frameworks/native/ability/native:abilitykit_native",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:system_ability_fwk",
  ]
  include_dirs = [
    "//utils/system/safwk/native/include",
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//base/account/os_account/interfaces/innerkits/include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/ability_manager/include",
    "//foundation/ability/ability_runtime/services/abilitymgr/include",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native",
  ]
  public_configs = [ ":test_public_config" ]
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_provider",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "preferences:native_preferences",
    "relational_store:native_appdatafwk",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
  ]

  defines = [
    "CONTACTSDATA_LOG_TAG = \"ContactsTest\"",
    "LOG_DOMAIN = 0xD001F09",
  ]
}

## UnitTest contacts_test }}}

group("unittest") {
  testonly = true

  deps = []

  deps += [ ":contacts_test" ]
}
