# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

ohos_fuzztest("TransliterateFuzzTest") {
  module_out_path = "contacts_data/contacts_data"
  fuzz_config_file = "//applications/standard/contacts_data/test/fuzztest/transliterate_fuzzer" # Fuzz组套路径

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
     "character_transliteratefuzz_test.cpp",
  ]

  deps = [
     "//applications/standard/contacts_data:contactsdataability",
  ]

  external_deps = [
  "ability_base:zuri",
  "ability_runtime:ability_manager",
  "ability_runtime:abilitykit_utils",
  "ability_runtime:data_ability_helper",
  "access_token:libaccesstoken_sdk",
  "access_token:libnativetoken",
  "access_token:libtoken_setproc",
  "access_token:libprivacy_sdk",
  "c_utils:utils",
  "hilog:libhilog",
  "icu:shared_icui18n",
  "icu:icundk",
  "icu:shared_icuuc",
  "ipc:ipc_core",
  "ipc:ipc_single",
  "samgr:samgr_proxy",
  "napi:ace_napi",
  "data_share:datashare_common",
  "data_share:datashare_consumer",
  "data_share:datashare_provider",
  "window_manager:libwm",
  "os_account:os_account_innerkits",
  ]

  defines = [
    "CONTACTSDATA_LOG_TAG = \"ContactsFuzztest\"",
    "LOG_DOMAIN = 0xD001F09",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":TransliterateFuzzTest" ]
}
